force-app/main/default/objects/Copado_Builder_Settings__mdt/Copado_Builder_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Copado Builder API integration</description>
    <label>Copado Builder Settings</label>
    <pluralLabel>Copado Builder Settings</pluralLabel>
</CustomObject>