force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Actions_Webhook_Path__c.field-meta.xml
<CustomField>
    <fullName>Actions_Webhook_Path__c</fullName>
    <description>Relative path for Copado Actions/Webhook RunJobTemplate (e.g. /services/apexrest/copado/v1/job or full webhook path). Leave blank to use in-org Job Execution DML only.</description>
    <label>Actions Webhook Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>