force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Base_Url__c</fullName>
    <description>Copado AI API base URL for your region</description>
    <label>Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>