force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Commit_Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Commit_Job_Template__c</fullName>
    <description>Copado Job Template API name or Id for user-story commit (e.g. sfdx_commit_1)</description>
    <label>Commit Job Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>