force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Default_Dev_Environment_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Dev_Environment_Id__c</fullName>
    <description>Salesforce Id of the leftmost Dev Copado Environment / Org Credential</description>
    <label>Default Dev Environment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>