force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Deploy_Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Job_Template__c</fullName>
    <description>Copado Job Template for Builder Deploy to Dev (e.g. builder_deploy_only). Not sfdx_deploy_1 (Promotion deploy).</description>
    <label>Deploy Job Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>