force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Deploy_Then_Commit_Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Then_Commit_Job_Template__c</fullName>
    <description>Copado Job Template that deploys the Builder package into the Dev org, then commits (e.g. builder_deploy_then_commit)</description>
    <label>Deploy Then Commit Job Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>