force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Id__c</fullName>
    <description>Copado AI Platform Organization ID</description>
    <label>Organization Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>