force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Use_Mock_API__c.field-meta.xml
<CustomField>
    <fullName>Use_Mock_API__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, uses mock responses instead of live Copado AI API</description>
    <label>Use Mock API</label>
    <type>Checkbox</type>
</CustomField>