force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Validate_Deploy_Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Validate_Deploy_Job_Template__c</fullName>
    <description>Job Template for validation deploy step (default sfdx_deploy_1 with deploymentDryRun).</description>
    <label>Validate Deploy Job Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>