force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Validate_Promote_Job_Template__c.field-meta.xml
<CustomField>
    <fullName>Validate_Promote_Job_Template__c</fullName>
    <description>Job Template for Promote step of Validate (default sfdx_promote_1).</description>
    <label>Validate Promote Job Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>