force-app/main/default/objects/Copado_Builder_Settings__mdt/fields/Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Id__c</fullName>
    <description>Optional default Copado AI workspace ID</description>
    <label>Workspace Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>